data/derived/comb/progs/unify/prog3040.ml.out
Characters 31-34:
  let _ = stringOfList (fun x -> 5*x) [1;2;3;4;5;6];;
                                 ^^^
Error: This expression has type int but an expression was expected of type
         string
